--- a/public/projects.css
+++ b/public/projects.css
@@ -1,10 +1,10 @@
 /* ------------projects------------------------------------------- */
 
 .projects{
-    margin-top: 65px;
+    margin-top: 45px;
     margin-bottom: 20px;
     font-weight: 800 ;
-    font-size:2.8em;
+    font-size:2.2rem;
     text-align: center;
 }
 .data{
