--- a/view/index.html
+++ b/view/index.html
@@ -54,14 +54,13 @@
                 MY PORTFOLIO
             </h1>
             <div class="header-text">
-                <h2> Hi, I'm Zory.</h2>
-                <p> Front-end / Back-end Developer </p>
+                <h2> Hi, I’m Zory — Full-Stack Developer</h2>
+                <p>Building scalable web apps with React, Node.js & MongoDB.</p>
             </div>
             <ul class="continue">
-                <li><a href="#projects" class="presentation">Continue</a></li>
+                <li><a href="#projects" class="presentation continue">Explore Projects</a></li>
             </ul>
-            <!--  iFRAME
-                <iframe frameborder="0" width="40%" height="800px" src="https://sudoku.zorrey.repl.co?embed=true"></iframe>  -->
+
 
         </section>
 
@@ -210,7 +209,7 @@
                             <img id="project-pic" src="../pictures/pathfinding.jpg" alt="Pathfinding App" />
                         </div>
                         <hr>
-                        <div class="title">Pathfinder </div>
+                        <div class="title">Pathfinder</div>
                         <div id="filter">
                             <a href="https://pathfinding-8oaj.onrender.com" target="_blank">
                                 <hr>
@@ -236,7 +235,8 @@
                                 <h4>Sudoku Solver & Generator</h4>
                                 <p> Full-stack Sudoku solver built with React and Node.js. Users can input or generate
                                     puzzles, which are solved using efficient algorithms. Highlights React
-                                    interactivity, backend logic, skills in algorithm design, API integration, and user-friendly UI design.
+                                    interactivity, backend logic, skills in algorithm design, API integration, and
+                                    user-friendly UI design.
                                 </p>
                                 <hr>
                             </a>
