--- a/public/header.css
+++ b/public/header.css
@@ -47,6 +47,8 @@
     left: 0;
     bottom: -1px;
     transition: 0.5s;
+      text-decoration: none;
+    text-decoration-style: none;
 }
 .nav-bar ul li a:hover::after,  .continue li a:hover::after {
     content: '';
@@ -77,7 +79,7 @@
     font-stretch: var(--welcome-font-str);
 }
 .header-text{
-    color:antiquewhite ;
+    color:white ;
     font-weight: 500;
 }
 .header-text h2{
@@ -97,7 +99,9 @@
 }
 
 @media screen and (max-width:500px){
-    
+    :root{
+    --welcome: 3em;
+}
     .welcome{
         padding: 0;
     }
