--- a/view/index.html
+++ b/view/index.html
@@ -54,8 +54,8 @@
                 MY PORTFOLIO
             </h1>
             <div class="header-text">
-                <h2> Hi, I’m Zory — Full-Stack Developer</h2>
-                <p>Building scalable web apps with React, Node.js & MongoDB.</p>
+                <h2> Hi, I'm Zory.</h2>
+               <p>Front-end / Back-end Developer</p>                
             </div>
             <ul class="continue">
                 <li><a href="#projects" class="presentation continue">Explore Projects</a></li>
